[gd_scene load_steps=11 format=4 uid="uid://drykddrsaldyn"]

[ext_resource type="Script" path="res://shared/ui/scenario_victory/scenario_victory.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dtyysjyd67h01" path="res://shared/assets/frames/frame_transparent_blue.png" id="2"]
[ext_resource type="Theme" uid="uid://cch6senrqoe8t" path="res://shared/ui/themes/ui_button_normal.tres" id="3"]
[ext_resource type="Texture2D" uid="uid://bjuynef5taie7" path="res://acts/full_game/conclusion_arc/finale/assets/victoryscreen2.png" id="4"]
[ext_resource type="Theme" uid="uid://d2e4h7vpe74g6" path="res://shared/assets/themes/btn_default.tres" id="5"]
[ext_resource type="Theme" uid="uid://dc65itxrsnhls" path="res://shared/assets/themes/head_line_text.theme" id="6"]
[ext_resource type="Theme" uid="uid://dhhfdgr1gdgrb" path="res://shared/assets/themes/character_speech_text.theme" id="7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_u68iv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wwhkw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3lhdy"]

[node name="ScenarioVictory" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.396078)
script = ExtResource("1")
metadata/_edit_lock_ = true

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -789.0
offset_top = -477.0
offset_right = 789.0
offset_bottom = 477.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.133333, 0.12549, 0.203922, 1)

[node name="MarginContainer2" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = -10
theme_override_constants/margin_top = -10
theme_override_constants/margin_right = -10
theme_override_constants/margin_bottom = -10
metadata/_edit_lock_ = true

[node name="NinePatchRect" type="NinePatchRect" parent="ColorRect/MarginContainer2"]
layout_mode = 2
texture = ExtResource("2")
patch_margin_left = 24
patch_margin_top = 24
patch_margin_right = 24
patch_margin_bottom = 24

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -66.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 32

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 50

[node name="ContinueButton" type="Button" parent="ColorRect/MarginContainer/HBoxContainer"]
visible = false
layout_mode = 2
focus_mode = 0
theme = ExtResource("3")
theme_override_styles/hover = SubResource("StyleBoxEmpty_u68iv")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_wwhkw")
theme_override_styles/normal = SubResource("StyleBoxEmpty_3lhdy")
text = "Continue Playing"

[node name="Sprite2D" type="Sprite2D" parent="ColorRect"]
unique_name_in_owner = true
position = Vector2(1050, 424)
texture = ExtResource("4")

[node name="QuitToMenuButton" type="Button" parent="ColorRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -230.0
offset_top = -124.0
offset_right = 230.0
offset_bottom = -36.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("5")
text = "EXIT_SCENARIO_BUTTON"

[node name="MarginContainer3" type="MarginContainer" parent="ColorRect"]
layout_mode = 0
offset_left = 31.0
offset_top = 34.0
offset_right = 550.0
offset_bottom = 803.0

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer3"]
layout_mode = 2
size_flags_vertical = 4

[node name="Header" type="Label" parent="ColorRect/MarginContainer3/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(460, 100)
layout_mode = 2
theme = ExtResource("6")
theme_override_font_sizes/font_size = 32
text = "VICTORY_DIALOG_TITLE"
vertical_alignment = 1
autowrap_mode = 3

[node name="Label" type="Label" parent="ColorRect/MarginContainer3/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(460, 0)
layout_mode = 2
theme = ExtResource("7")
theme_override_font_sizes/font_size = 24
text = "It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text,"
vertical_alignment = 1
autowrap_mode = 3

[connection signal="hidden" from="." to="." method="_on_hidden"]
[connection signal="pressed" from="ColorRect/MarginContainer/HBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="ColorRect/QuitToMenuButton" to="." method="_on_quit_to_menu_button_pressed"]
